# symbolic-math

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: CI.yml  cmake-multi-platform.yml
doc/: AST_UML_diagram.drawio  uml_diagram.drawio
doc/res/: dir_struct.drawio
include/: expression.h  symbol.h
include/symcpp/: symcpp.h
include/symcpp/utils/: log.hpp
samples/: basic.cpp  interactive.cpp  simple.cpp  tangent_builder.cpp
samples/algebra/: algebra.h
samples/app/: application.cpp  application.h
samples/basic/: basic.cpp
samples/interactive/: interactive.cpp
samples/simple/: simple.cpp
samples/stack_calculator/app/: application.cpp  application.h
samples/tangent_builder/: tangent_builder.cpp
src/: calculator.cpp  calculator.h  constants_storage.h  expression.cpp  main.cpp  main_algebra.cpp  main_calc.cpp  main_lib.cpp  number.cpp  symbol.cpp  symcpp.h
src/app/: application.cpp  application.h
src/calc/: calculator.cpp  calculator.h
src/calc/parser/: parser.cpp  parser.h
src/core/abstract-syntax-tree/: node.h
src/core/abstract-syntax-tree/operands/: constant_node.cpp  constant_node.h  number_node.cpp  number_node.h  variable_node.cpp  variable_node.h
src/core/abstract-syntax-tree/operations/: binary_operation.cpp  binary_operation.h  unary_operation.h
src/core/abstract-syntax-tree/operations/binary/: addition.h  division.cpp  division.h  exponentiation.cpp  exponentiation.h  multiplication.h  subtraction.h
src/core/abstract-syntax-tree/operations/unary/: cos.h  logarithm.h  sqrt.h  tangent.h  unary_minus.cpp  unary_minus.h
src/infrastructure/converter/: converter.cpp  converter.h
src/math/: constants_storage.h  expression.cpp  expression.h  number.cpp  number.h  symbol.cpp  symbol.h
src/math/abstract-syntax-tree/: ast.h  expression.h  node.h
src/math/abstract-syntax-tree/operands/: number.cpp  number.h  number_node.cpp  number_node.h  variable.cpp  variable.h  variable_node.cpp  variable_node.h
src/math/abstract-syntax-tree/operations/: binary_operation.cpp  binary_operation.h  unary_operation.cpp  unary_operation.h
src/math/abstract-syntax-tree/operations/binary/: addition.cpp  addition.h  division.cpp  division.h  exponentiation.cpp  exponentiation.h  multiplication.cpp  multiplication.h  subtraction.cpp  subtraction.h
src/math/abstract-syntax-tree/operations/unary/: cos.cpp  cos.h  logarithm.cpp  logarithm.h  sin.cpp  sin.h  sqrt.cpp  sqrt.h  tangent.cpp  tangent.h  unary_minus.cpp  unary_minus.h
src/math/algebra/: algebra.cpp  algebra.h  expression.h
src/math/algebra/expressions/: expression.h  math.h
src/math/algebra/expressions/operands/: number.cpp  number.h  variable.cpp  variable.h
src/math/algebra/expressions/operations/: binary-operation.cpp  binary-operation.h  binary_operation.cpp  binary_operation.h  unary-operation.cpp  unary-operation.h  unary_operation.cpp  unary_operation.h
src/math/algebra/expressions/operations/binary/: addition.cpp  addition.h  division.cpp  division.h  exponentiation.cpp  exponentiation.h  multiplication.cpp  multiplication.h  substraction.cpp  substraction.h  subtraction.cpp  subtraction.h
src/math/calc/: calculator.cpp  calculator.h
src/math/stack_calc/: calculator.cpp  calculator.h
src/math/utils/converter/: converter.h
src/math/utils/helper/: helper.cpp  helper.h
src/math/utils/parser/: ast_builder.cpp  ast_builder.h
src/symcpp/: constants_storage.h  expression.cpp  expression.h  number.cpp  number.h  symbol.cpp  symbol.h
src/symcpp/abstract-syntax-tree/: ast.h  node.h
src/symcpp/abstract-syntax-tree/operands/: constant_node.cpp  constant_node.h  number_node.cpp  number_node.h  variable_node.cpp  variable_node.h
src/symcpp/abstract-syntax-tree/operations/: binary_operation.cpp  binary_operation.h  unary_operation.cpp  unary_operation.h
src/symcpp/abstract-syntax-tree/operations/binary/: addition.cpp  addition.h  division.cpp  division.h  exponentiation.cpp  exponentiation.h  multiplication.cpp  multiplication.h  subtraction.cpp  subtraction.h
src/symcpp/abstract-syntax-tree/operations/unary/: cos.cpp  cos.h  logarithm.cpp  logarithm.h  sin.cpp  sin.h  sqrt.cpp  sqrt.h  tangent.cpp  tangent.h  unary_minus.cpp  unary_minus.h
src/symcpp/stack_calc/: calculator.cpp  calculator.h
src/symcpp/utils/converter/: converter.cpp
src/symcpp/utils/helper/: helper.cpp  helper.h
src/symcpp/utils/parser/: ast_builder.cpp  ast_builder.h
src/utils/abstract-syntax-tree/: ast.cpp  ast.h  ast_builder.cpp  ast_builder.h
src/utils/converter/: converter.cpp  converter.h
src/utils/helper/: helper.cpp  helper.h
src/utils/logger/: log.cpp
src/utils/parser/: ast_builder.cpp  ast_builder.h
symcpp/: constants_storage.h  expression.cpp  expression.h  number.h  symbol.cpp  symbol.h  symcpp.h
symcpp/core/abstract-syntax-tree/: ast.h  node.h
symcpp/core/abstract-syntax-tree/operands/: constant_node.cpp  constant_node.h  number_node.h  variable_node.cpp  variable_node.h
symcpp/core/abstract-syntax-tree/operations/: binary_operation.cpp  binary_operation.h  unary_operation.cpp  unary_operation.h
symcpp/core/abstract-syntax-tree/operations/binary/: addition.h  division.h  exponentiation.cpp  exponentiation.h  multiplication.h  subtraction.cpp  subtraction.h
symcpp/core/abstract-syntax-tree/operations/unary/: cos.cpp  cos.h  logarithm.cpp  logarithm.h  sin.h  sqrt.cpp  sqrt.h  tangent.cpp  tangent.h  unary_minus.h
symcpp/core/engine/stack_calc/: calculator.cpp  calculator.h
symcpp/utils/converter/: converter.h
symcpp/utils/helper/: helper.h
symcpp/utils/logger/: log.cpp  log.hpp  logger.cpp  logger.h
symcpp/utils/parser/: ast_builder.cpp  ast_builder.h
tests/: algebra_test.cpp  application_test.cpp  ast_test.cpp  binary_operations_test.cpp  calculator_test.cpp  catch.hpp  converter_test.cpp  operands_test.cpp  unary_operations_test.cpp
tests/api/: symbol_test.cpp
tests/math/: basic_test.cpp  derivative.cpp  stack_machine.cpp
tests/utils/: converter_test.cpp  logger_test.cpp
tools/: main_calc.cpp  main_lib.cpp
(+14 files in other folders)
